kubernetes/apps/external/kvm-icarus/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app kvm-icarus
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
